@@ -29,7 +29,7 @@ from sets import Set
 import traceback
 
 try:
-    import Image	# Python Imaging Library
+    from PIL import Image  # Python Imaging Library
     hasImageModule = True
 except ImportError:
     hasImageModule = False
@@ -83,6 +83,7 @@ learning_data_len = {
     }
 
 easiness_accuracy = 1000
+jojo_title_height_pixels = 43
 
 ######################################################################
 # Interfaces
